--- a/style.css
+++ b/style.css
@@ -47,11 +47,18 @@ main{
 .tittle{
     color: #177e89e6;
     font-weight: bolder;
-    font-size: 4.8em;
+    font-size: 5.2em;
     text-align: center;
     font-family: "Acme", sans-serif;
     padding: 2rem;
     text-shadow: 5px 5px 10px #414141cc;
+}
+label{
+    padding: 10px;
+    font-size: 1.8em;
+}
+#orden{
+    font-size: 1.5em;
 }
 .card{
     border: 2px #414141cc;
