--- a/style.css
+++ b/style.css
@@ -1,157 +1,151 @@
-*{
-    margin: 0;
-    padding: 0;
-    
+* {
+  margin: 0;
+  padding: 0;
 }
-html{
-    font-size: 62.5%;
-    font-family: "Signika Negative", sans-serif;
-    font-variant: small-caps;
-    
+html {
+  font-size: 62.5%;
+  font-family: "Signika Negative", sans-serif;
+  font-variant: small-caps;
 }
-body{
-    background-color: #b5bbb2;
+body {
+  background: rgb(65, 65, 65);
+  background: linear-gradient(
+    270deg,
+    rgba(65, 65, 65, 1) 0%,
+    rgba(181, 187, 178, 1) 65%
+  );
 }
-.navbar{
-    background-image: url(../img/fondo_header.jpg);
-    opacity: 1;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: fixed;
-    padding: 0 auto; 
-    --bs-navbar-toggler-icon-bg: none
+.navbar {
+  background-image: url(../img/fondo_header.jpg);
+  opacity: 1;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;
+  padding: 0 auto;
+  --bs-navbar-toggler-icon-bg: none;
 }
-.navbar-brand{
-    width: 120px;
+.navbar-brand {
+  width: 120px;
 }
-.navbar-toggler-icon{
-    width: 30px;
-    height: 30px;
-    color: #f4772a;
+.navbar-toggler-icon {
+  width: 30px;
+  height: 30px;
+  color: #f4772a;
 }
-#loggin{
-    margin-left: 700px;
+#loggin {
+  margin-left: 700px;
 }
-.show{
-    background-color: #414141;
+.show {
+  background-color: #414141;
 }
-.offcanvas-title{
-    color: #acbfa4;
-    font-size: 2.4em;
-}
-
-#contenedorCarro{
-    overflow: auto;
-}
-.carroImg{
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    border-radius: 6px ;
-        
-}
-.carroMarca{
-    font-size: .8em;
-    color: #acbfa4 ;
-    
-    
-}
-.carroPrecio{
-    color: #f4772a;
-    font-size: 1.2em;
-    margin-left: 150px;
-}
-.carroBotones{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.carroBoton{
-    border-radius: 6px ;
-    width: 2rem;
-    height: 2rem;
-    font-weight: bolder;
-    font-size: 1.2em;
-    background-color: #acbfa4;
-}
-.carroTexto{
-    font-size: 1.2em;
-}
-.carroCantidad{
-    background-color: azure;
-    border-radius: 6px ;
-    width: 2rem;
-    text-align: center;
-    font-size: 1.2em;
-    
-
+.offcanvas-title {
+  color: #acbfa4;
+  font-size: 2.4em;
 }
 
-main{
-    margin-top: 200px;
+#contenedorCarro {
+  overflow: auto;
 }
-.tittle{
-    color: #177e89e6;
-    font-weight: bolder;
-    font-size: 5.2em;
-    text-align: center;
-    font-family: "Acme", sans-serif;
-    padding: 2rem;
-    text-shadow: 5px 5px 10px #414141cc;
+.carroImg {
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  border-radius: 6px;
 }
-label{
-    padding: 10px;
-    font-size: 1.8em;
+.carroMarca {
+  font-size: 0.8em;
+  color: #acbfa4;
 }
-#orden{
-    font-size: 1.5em;
+.carroPrecio {
+  color: #f4772a;
+  font-size: 1.2em;
+  margin-left: 150px;
 }
-.card{
-    border: 2px #414141cc;
-    background-color: #177e89e6;
-    display: grid;
-    grid-template-columns: 35% 65%;
-    margin: 10px 0px ;
-    
+.carroBotones {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
-.card-brand{
-    font-size: 1.8em;
-    color: #acbfa4 ;
-    position: absolute;
-    right: 30px;
-    
+.carroBoton {
+  border-radius: 6px;
+  width: 2rem;
+  height: 2rem;
+  font-weight: bolder;
+  font-size: 1.2em;
+  background-color: #acbfa4;
 }
-.card-title{
-    margin-top: 30px;
-    font-size: 3.2em;
-    color: #acbfa4 ;
-    
+.carroTexto {
+  font-size: 1.2em;
 }
-.card-text{
-    font-size: 1.6em;
+.carroCantidad {
+  background-color: azure;
+  border-radius: 6px;
+  width: 2rem;
+  text-align: center;
+  font-size: 1.2em;
 }
-.card-price{
-    position: absolute;
-    right: 30px;
-    bottom: 40px;
-    color: #acbfa4;
-    font-size: 1.8em;
-}
-.botonAgregar{
-    position: absolute;
-    right: 30px;
-    bottom: 20px;
 
+main {
+  margin-top: 200px;
 }
-.carousel{
-    padding: 5px;
+.tittle {
+  color: #177e89e6;
+  font-weight: bolder;
+  font-size: 5.2em;
+  text-align: center;
+  font-family: "Acme", sans-serif;
+  padding: 2rem;
+  text-shadow: 5px 5px 10px #414141cc;
 }
-.button{
-    background-color: #f4772a;
-    padding: 2px;
-    border-radius: 6px ;
-    border-color: #c4c4c499;
+label {
+  padding: 10px;
+  font-size: 1.8em;
 }
-.marca{
-    margin: 30px 500px;
+#orden {
+  font-size: 1.5em;
+}
+.card {
+  border: 2px #414141cc;
+  background-color: #177e89e6;
+  display: grid;
+  grid-template-columns: 35% 65%;
+  margin: 10px 0px;
+}
+.card-brand {
+  font-size: 1.8em;
+  color: #acbfa4;
+  position: absolute;
+  right: 30px;
+}
+.card-title {
+  margin-top: 30px;
+  font-size: 3.2em;
+  color: #acbfa4;
+}
+.card-text {
+  font-size: 1.6em;
+}
+.card-price {
+  position: absolute;
+  right: 30px;
+  bottom: 40px;
+  color: #acbfa4;
+  font-size: 1.8em;
+}
+.botonAgregar {
+  position: absolute;
+  right: 30px;
+  bottom: 20px;
+}
+.carousel {
+  padding: 5px;
+}
+.button {
+  background-color: #f4772a;
+  padding: 2px;
+  border-radius: 6px;
+  border-color: #c4c4c499;
+}
+.marca {
+  margin: 30px 500px;
 }
